# pop

./: .coverage  .gitignore  ARCHITECTURE.md  EVAL_STRATEGY.md  FRAMEWORK_ARCHITECTURE.md  LICENSE  OPEN_SOURCE_LAUNCH_PLAYBOOK.md  OPEN_SOURCE_PROJECT_PLAN.md  README.md  SKILLS.md  langchain_langraph_criticism_report.md  pyproject.toml
benchmarks/: bench_dx.py  bench_startup.py  generate_charts.py
benchmarks/results/: dx_comparison.json  latest.json  latest_report.md
docs/: benchmarks.md  memory.md  multi-agent.md  providers.md  streaming.md  workflows.md
examples/: 01_hello_agent.py  02_web_search_agent.py  03_structured_output.py  04_streaming.py  05_multi_provider.py  06_augmented_llm.py  07_prompt_chaining.py  08_routing.py  09_parallelization.py  10_orchestrator_workers.py  11_evaluator_optimizer.py
src/pop/: __init__.py  _sync.py  agent.py  runner.py  tool.py  types.py
src/pop/hooks/: __init__.py  base.py  console.py  cost.py  file_log.py
src/pop/memory/: __init__.py  base.py  inmemory.py  markdown.py
src/pop/models/: __init__.py  anthropic.py  base.py  deepseek.py  gemini.py  glm.py  grok.py  kimi.py  minimax.py  openai.py  router.py
src/pop/multi/: __init__.py  handoff.py  patterns.py
src/pop/tools/: __init__.py  calculator.py  read_url.py  web_search.py
src/pop/workflows/: __init__.py  patterns.py
tests/: conftest.py  test_agent.py  test_hooks.py  test_runner.py  test_sync.py  test_tool.py  test_tools.py  test_types.py
tests/test_memory/: test_inmemory.py  test_markdown.py
tests/test_models/: test_anthropic.py  test_deepseek.py  test_gemini.py  test_glm.py  test_grok.py  test_kimi.py  test_minimax.py  test_openai.py  test_router.py
tests/test_multi/: test_handoff.py  test_patterns.py
tests/test_workflows/: test_patterns.py
